fix login user on mobile (#817)

--- a/assets/src/scss/3-global/_navbar.scss
+++ b/assets/src/scss/3-global/_navbar.scss
@@ -121,12 +121,20 @@
     float: right;
     margin-top: 6px;
     margin-right: 10px;
+    @media (max-width: 375px) {
+      margin-right: 0;
+    }
   }
 
   .navbar-right .navbar-form {
     margin: 0 -15px;
     border: none;
     box-shadow: none;
+    .btn-link {
+      @media (max-width: 375px) {
+        font-size: 14px;
+      }
+    }
   }
 
   #login-nav .navbar-form {
